# pyoverload

./: README.md
methodoverload/: pyproject.toml  setup.py
methodoverload/docs/: README.md  architecture.md  metaclass_design.md
methodoverload/examples/: basic.py  classmethod.py  staticmethod.py  types.py
methodoverload/features/: features.md
methodoverload/issues/: issues.md
methodoverload/methodoverload/: __init__.py  core.py  metaclass.py  utils.py
methodoverload/tests/: test_basic_overload.py  test_error_messages.py  test_metaclass.py  test_static_class_methods.py
pyoverload/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pyoverload/docs/: overload_resolution.md
pyoverload/examples/: basic.py  classmethod.py  staticmethod.py  types.py
pyoverload/methodoverload/: cache.py  decorators.py  typing.py
pyoverload/pyoverload/: errors.py
pyoverload/tests/: test_basic_overload.py  test_cache.py  test_error_messages.py  test_metaclass.py  test_static_class_methods.py
